Very small mod to the rofi config.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -8,13 +8,6 @@ env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,24
 
-# Environmental variables
-env = SDL_VIDEODRIVER,wayland
-env = _JAVA_AWT_WM_NONPARENTING,1
-env = QT_QPA_PLATFORM,wayland
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_DESKTOP,Hyprland
-
 # Startup applications
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = waybar
@@ -123,7 +116,7 @@ bind = SUPER SHIFT, D, exec, makoctl dismiss
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, E, exec, $fileManager
-bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 2; }'
+bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -no-show-icons
 bind = $mod SHIFT, F, exec, hyprpicker
 bind = $mod, S, exec, hyprshot -o ~/Pictures/Screenshots -m output -z
 bind = $mod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
