Changed my wallpaper again.

--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/Wallpapers/moon.png
-wallpaper = , ~/Pictures/Wallpapers/moon.png
+preload = ~/Pictures/Wallpapers/idk.png.png
+wallpaper = , ~/Pictures/Wallpapers/idk.png
