--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/Wallpapers/idk.png.png
-wallpaper = , ~/Pictures/Wallpapers/idk.png
+preload = ~/Pictures/Wallpapers/black_.png
+wallpaper = , ~/Pictures/Wallpapers/black_.png
