--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -157,7 +157,7 @@ layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
 
 # ──────────────────────────────
-# Decorations & blur
+# Decorations & effects
 # ──────────────────────────────
 decoration {
     blur {
@@ -170,6 +170,10 @@ decoration {
     rounding = 7
     rounding_power = 2.0
 }
+decoration:shadow {
+    range = 3
+    offset = 5, 5
+}
 
 # ──────────────────────────────
 # Window decorations
@@ -179,8 +183,8 @@ general {
         allow_tearing = false
         gaps_in = 3
         gaps_out = 9
-        col.active_border = rgb(5b5d62)
-        col.inactive_border = rgb(161618)
+        col.active_border = rgb(3f4044)
+        col.inactive_border = rgb(1a1a1b)
         border_size = 2
 }
 # Layouts
@@ -211,7 +215,7 @@ animations {
         bezier = winOut, 0.3, -0.3, 0, 1
         bezier = liner, 1, 1, 1, 1
         animation = windowsIn, 1, 2, winIn
-        animation = windowsOut, 1, 2, winOut, popin 80%
+        animation = windowsOut, 1, 4, winOut, popin 80%
         animation = windowsMove, 1, 3, wind
         animation = border, 1, 1, liner
         animation = borderangle, 1, 30, liner, once
