Made window outer gaps 10.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -178,9 +178,9 @@ general {
     layout = master
         allow_tearing = false
         gaps_in = 3
-        gaps_out = 9
+        gaps_out = 10
         col.active_border = rgb(3f4044)
-        col.inactive_border = rgb(1a1a1b)
+        col.inactive_border = rgb(171719)
         border_size = 2
 }
 # Layouts
