pkg scripts changed a bit to install paru a bit better.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ input {
 # ──────────────────────────────
 $mod = SUPER
 $terminal = footclient
-$fileManager = nemo
+$fileManager = nautilus
 $fileManager-alt = footclient -e lf
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
