--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -180,7 +180,7 @@ general {
         gaps_in = 3
         gaps_out = 9
         col.active_border = rgb(3f4044)
-        col.inactive_border = rgb(171719)
+        col.inactive_border = rgb(18181a)
         border_size = 2
 }
 # Layouts
