zprofile reduced a bit and transferred some env vars to my hyprland.conf

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -86,9 +86,7 @@ bind = $mod SHIFT, 0, movetoworkspace, 10
 # ──────────────────────────────
 bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
-bind = $mod SHIFT, SPACE, togglefloating
-bind = $mod SHIFT, SPACE, centerwindow
-bind = $mod SHIFT, SPACE, resizeactive, exact 1280 720
+bind = $mod SHIFT, SPACE, exec, ~/.config/hypr/float.sh
 bind = ALT, Return, fullscreen
 bind = $mod, RETURN, exec, $terminal
 bind = $mod, SPACE, exec, $menu
