Made lf the file manager that gets launched when pressing the keybind.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -38,8 +38,8 @@ input {
 # ──────────────────────────────
 $mod = SUPER
 $terminal = footclient
-$fileManager = nautilus
-$fileManager-alt = footclient -e lf
+$fileManager = footclient -e lf
+$fileManager-alt = nautilus
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
@@ -112,6 +112,7 @@ bind = SUPER SHIFT, D, exec, makoctl dismiss
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, E, exec, $fileManager
+bind = $mod SHIFT, E, exec, $fileManager-alt
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -no-show-icons
 bind = $mod SHIFT, F, exec, hyprpicker
 bind = $mod, S, exec, hyprshot -o ~/Pictures/Screenshots -m output -z
