Made the shadows a bit more visible.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -169,6 +169,13 @@ decoration {
     rounding = 7
     rounding_power = 2.0
 }
+decoration:shadow {
+    enabled = true
+    range = 16
+    offset = 2 2
+    scale = 1.0
+    color = rgb(101012)
+}
 
 # ──────────────────────────────
 # Window decorations
