Replaced volume script with swayosd.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,4 +1,5 @@
 # Utilities
+exec-once = swayosd-server
 exec-once = /usr/lib/hyprpolkitagent
 exec-once = ~/.config/scripts/power-saver
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
@@ -46,9 +47,9 @@ $menu = rofi -disable-history -show drun
 # ──────────────────────────────
 # Volume Control
 # ──────────────────────────────
-bind = , XF86AudioRaiseVolume, exec, ~/.config/scripts/volume --inc
-bind = , XF86AudioLowerVolume, exec, ~/.config/scripts/volume --dec
-bind = , XF86AudioMute, exec, ~/.config/scripts/volume --toggle
+bind = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bind = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bind = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 
 # ──────────────────────────────
 # Clipboard history
@@ -170,11 +171,11 @@ decoration {
     rounding_power = 2.0
 }
 decoration:shadow {
-    enabled = true
-    range = 16
-    offset = 2 2
-    scale = 1.0
-    color = rgb(101012)
+    enabled = false
+#     range = 16
+#     offset = 2 2
+#     scale = 1.0
+#     color = rgb(101012)
 }
 
 # ──────────────────────────────
@@ -186,7 +187,7 @@ general {
         gaps_in = 3
         gaps_out = 9
         col.active_border = rgb(3f4044)
-        col.inactive_border = rgb(18181a)
+        col.inactive_border = rgb(1e1e20)
         border_size = 2
 }
 # Layouts
