--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -12,7 +12,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/Pictures/Wallpapers/moon.png
+    path = ~/Pictures/Wallpapers/sunny.png
     blur_passes = 2
 }
 
@@ -61,7 +61,7 @@ input-field {
     dots_size = 0.2
     dots_spacing = 0.2
     dots_center = true
-    outer_color = rgb(eeeeee)
+    outer_color = rgb(3f4044)
     inner_color = rgb(1e1e20)
     font_color = rgb(eeeeee)
     fade_on_empty = false
