Added sway configurations.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ env = XCURSOR_SIZE,24
 
 # Startup applications
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
-exec-once = waybar
+exec-once = waybar -c ~/.config/waybar/hyprconfig.jsonc
 exec-once = hyprpaper
 exec-once = mako
 exec-once = foot --server
