Made sway's move and resize thing slightly better.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -109,7 +109,7 @@ bind = $mod SHIFT, j, movewindow, d
 # ──────────────────────────────
 # App Shortcuts
 # ──────────────────────────────
-bind = SUPER SHIFT, D, exec, makoctl dismiss
+bind = SUPER SHIFT, D, exec, ~/.config/scripts/power-menu
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, E, exec, $fileManager
@@ -128,11 +128,6 @@ bind = $mod ALT, H, resizeactive, -20 0
 bind = $mod ALT, J, resizeactive, 0 20
 bind = $mod ALT, K, resizeactive, 0 -20
 bind = $mod ALT, L, resizeactive, 20 0
-
-# ──────────────────────────────
-# System Utilities
-# ──────────────────────────────
-bind = CTRL ALT, DELETE, exec, ~/.config/scripts/power-menu
 
 # ──────────────────────────────
 # Designated workspaces for applications
@@ -178,7 +173,7 @@ general {
     layout = master
         allow_tearing = false
         gaps_in = 4
-        gaps_out = 8
+        gaps_out = 9
         col.active_border = rgb(3f4044)
         col.inactive_border = rgb(1e1e20)
         border_size = 2
