Reduced border radius from 12 to 10 on waybar.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ input {
 $mod = SUPER
 $terminal = footclient
 $fileManager = footclient -e lf
-$fileManager-alt = nautilus
+$fileManager-alt = thunar
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
