Fixed some hyprland issues.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ env = XCURSOR_SIZE,24
 
 # Startup applications
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
-exec-once = waybar -c ~/.config/waybar/hyprconfig.jsonc
+exec-once = waybar -c ~/.config/waybar/config_hypr.jsonc
 exec-once = hyprpaper
 exec-once = mako
 exec-once = foot --server
@@ -161,8 +161,8 @@ decoration {
         ignore_opacity = true
         new_optimizations = true
     }
-    rounding = 7
-    rounding_power = 2.0
+    rounding = 0
+    # rounding_power = 2.0
 }
 
 # ──────────────────────────────
