Made wallpaper a proper solid color in hyprland.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -2,19 +2,21 @@
 exec-once = swayosd-server
 exec-once = /usr/lib/hyprpolkitagent
 exec-once = ~/.config/scripts/power-saver
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,24
 
 # Startup applications
-exec-once = hyprctl setcursor Bibata-Modern-Classic 24
-exec-once = waybar -c ~/.config/waybar/config_hypr.jsonc
-exec-once = hyprpaper
-exec-once = mako
 exec-once = foot --server
-exec-once = mkdir -p ~/.local/share/fonts
-exec-once = mkdir -p .themes
+misc {
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
+    background_color = 0x18181a
+}
+exec-once = waybar -c ~/.config/waybar/config_hypr.jsonc
+exec-once = mako
 
 # ──────────────────────────────
 # Monitor configuration
