--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/Wallpapers/pure.png
-wallpaper = , ~/Pictures/Wallpapers/pure.png
+preload = ~/Pictures/Wallpapers/bg.png
+wallpaper = , ~/Pictures/Wallpapers/bg.png
