Replaced rofi with tofi when launching apps on sway.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -42,16 +42,16 @@ input {
 $mod = SUPER
 $terminal = footclient
 $fileManager = footclient -e lf
-$fileManager-alt = thunar
+$fileManager-alt = nemo
 $browser = zen-browser
-$menu = rofi -disable-history -show drun
+$menu = tofi-drun
 
 # ──────────────────────────────
 # Volume Control
 # ──────────────────────────────
-bind = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
-bind = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
-bind = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bindl = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bindl = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindl = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 
 # ──────────────────────────────
 # Clipboard history
@@ -163,8 +163,8 @@ decoration {
         ignore_opacity = true
         new_optimizations = true
     }
-    rounding = 0
-    # rounding_power = 2.0
+    rounding = 7
+    rounding_power = 2.0
 }
 
 # ──────────────────────────────
