Resolved cut-off results on tofi.

--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -4,24 +4,17 @@ history = false
 width = 100%
 height = 30
 horizontal = true
-font-size = 14
-font = /usr/share/fonts/TTF/JetBrainsMono-Medium.ttf
+font-size = 13.15
 prompt-text = "> "
+font = monospace
+background-color = #1e1e20
+selection-color = #8a9a59
 outline-width = 0
 border-width = 0
-background-color = #1e1e20
-selection-color = #5f7a8c
-selection-background = #2e3033
-num-results = 10
-min-input-width = 240
+min-input-width = 150
 result-spacing = 20
+placeholder-text = ".."
 padding-top = 2
 padding-bottom = 0
 padding-left = 5
 padding-right = 0
-hint-font = false
-placeholder-text = ".."
-key-up = ctrl+k
-key-down = ctrl+j
-key-left = ctrl+h
-key-right = ctrl+l
