--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -163,8 +163,8 @@ decoration {
         ignore_opacity = true
         new_optimizations = true
     }
-    rounding = 7
-    rounding_power = 2.0
+    rounding = 0
+    # rounding_power = 2.0
 }
 
 # ──────────────────────────────
