--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -16,5 +16,8 @@ padding-left = 5
 padding-right = 0
 background-color = #1e1e20
 selection-color = #8a9a59
+prompt-color = "#FFFFFF"
+placeholder-color = "#656567"
+text-color = "#858587"
 outline-width = 0
 border-width = 0
