--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -6,18 +6,19 @@ height = 30
 horizontal = true
 font-size = 13
 font = monospace
-prompt-text = "> "
-placeholder-text = ".."
-min-input-width = 150
+prompt-text = ""
+placeholder-text = "Type to search.."
+min-input-width = 350
 result-spacing = 20
 padding-top = 2
-padding-bottom = 0
-padding-left = 5
-padding-right = 0
+padding-bottom = 2
+padding-left = 10
+padding-right = 10
 background-color = #1e1e20
-selection-color = #8a9a59
-prompt-color = "#FFFFFF"
-placeholder-color = "#656567"
-text-color = "#858587"
+selection-color = #ffffff
+selection-background = #526a7a
+prompt-color = "#eeeeee"
+placeholder-color = "#454547"
+text-color = "#eeeeee"
 outline-width = 0
 border-width = 0
