Tofi and waybar tweaks.

--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -8,17 +8,21 @@ font-size = 13
 font = monospace
 prompt-text = ""
 placeholder-text = "Type to search.."
+hint-font = false
 min-input-width = 350
 result-spacing = 20
-padding-top = 2
-padding-bottom = 2
-padding-left = 10
-padding-right = 10
+outline-width = 0
+border-width = 0
+padding-top = 3
+padding-bottom = 0
+padding-left = 5
+padding-right = 0
 background-color = #1e1e20
-selection-color = #ffffff
-selection-background = #526a7a
-prompt-color = "#eeeeee"
-placeholder-color = "#454547"
-text-color = "#eeeeee"
+selection-color = #1e1e20
+selection-background = #8e9760
+selection-background-padding = 0, 8
+prompt-color = #fff
+placeholder-color = #656567
+text-color = "#eee"
 outline-width = 0
 border-width = 0
