What am I even committing right now?

--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -9,18 +9,19 @@ font = monospace
 prompt-text = ""
 placeholder-text = "Type to search.."
 hint-font = false
-min-input-width = 350
-result-spacing = 20
+min-input-width = 320
+result-spacing = 25
 outline-width = 0
 border-width = 0
-padding-top = 3
+padding-top = 2
 padding-bottom = 0
-padding-left = 5
+padding-left = 10
 padding-right = 0
 background-color = #1e1e20
-selection-color = #1e1e20
-selection-background = #8e9760
+selection-color = #eee
+selection-background = #353537
 selection-background-padding = 0, 8
+selection-background-corner-radius = 7
 prompt-color = #fff
 placeholder-color = #656567
 text-color = "#eee"
