--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ misc {
     disable_hyprland_logo = true
     background_color = 0x18181a
 }
-exec-once = waybar -c ~/.config/waybar/config_hypr.jsonc
+exec-once = waybar -c ~/.config/waybar/hyprland/config.jsonc
 exec-once = mako
 
 # ──────────────────────────────
@@ -58,7 +58,7 @@ bindl = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 # ──────────────────────────────
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-bind = SUPER, V, exec, cliphist list | rofi -dmenu -p "Clipboard history:" | cliphist decode | wl-copy
+bind = SUPER, V, exec, cliphist list | rofi -dmenu -p "Cliphist:" | cliphist decode | wl-copy
 
 # ──────────────────────────────
 # Workspace Management
