Improved aur setup.

--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -9,8 +9,8 @@ font = monospace
 prompt-text = ""
 placeholder-text = "Type to search.."
 hint-font = false
-min-input-width = 180
-result-spacing = 25
+min-input-width = 225
+result-spacing = 20
 outline-width = 0
 border-width = 0
 padding-top = 2
@@ -18,8 +18,8 @@ padding-bottom = 0
 padding-left = 10
 padding-right = 0
 background-color = #1e1e20
-selection-color = #eee
-selection-background = #353537
+selection-color = #8e9760
+selection-background = #333335
 selection-background-padding = 0, 8
 selection-background-corner-radius = 7
 prompt-color = #fff
