--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -6,23 +6,23 @@ height = 30
 horizontal = true
 font-size = 13
 font = monospace
-prompt-text = ""
-placeholder-text = "Type to search.."
+prompt-text = "  "
+placeholder-text = ""
 hint-font = false
-min-input-width = 225
+min-input-width = 180
 result-spacing = 20
 outline-width = 0
 border-width = 0
 padding-top = 2
 padding-bottom = 0
-padding-left = 10
+padding-left = 5
 padding-right = 0
 background-color = #1e1e20
 selection-color = #8e9760
 selection-background = #333335
 selection-background-padding = 0, 8
 selection-background-corner-radius = 7
-prompt-color = #fff
+prompt-color = #656567
 placeholder-color = #656567
 text-color = "#eee"
 outline-width = 0
