--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -7,23 +7,16 @@ horizontal = true
 font-size = 13
 font = monospace
 prompt-text = "  "
-placeholder-text = ""
-hint-font = false
-min-input-width = 300
-result-spacing = 20
+prompt-color = #656567
+font = monospace
 outline-width = 0
 border-width = 0
-padding-top = 2
+background-color = #1e1e20
+text-color = "#eee"
+selection-color = #8e9760
+min-input-width = 320
+result-spacing = 20
+padding-top = 3
 padding-bottom = 0
 padding-left = 5
 padding-right = 0
-background-color = #1e1e20
-selection-color = #8e9760
-selection-background = #333335
-selection-background-padding = 0, 8
-selection-background-corner-radius = 7
-prompt-color = #656567
-placeholder-color = #656567
-text-color = "#eee"
-outline-width = 0
-border-width = 0
