Replaced nemo with thunar.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ input {
 $mod = SUPER
 $terminal = footclient
 $fileManager = footclient -e lf
-$fileManager-alt = nemo
+$fileManager-alt = thunar
 $browser = zen-browser
 $menu = tofi-drun
 
@@ -150,8 +150,9 @@ decoration {
         ignore_opacity = true
         new_optimizations = true
     }
-    rounding = 0
-    # rounding_power = 2.0
+}
+decoration:shadow {
+    enabled = false
 }
 
 # ──────────────────────────────
