--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -21,7 +21,7 @@ exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DE
 exec systemctl enable --user --now xdg-desktop-portal-wlr.service
 set $browser zen-browser
 set $fm footclient -e lf
-set $fm-gui nemo
+set $fm-gui thunar
 set $menu tofi-drun
 set $mod Mod4
 
