--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -140,15 +140,11 @@ layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
 
 # ──────────────────────────────
-# Decorations & effects
+# Disable decorations & effects
 # ──────────────────────────────
 decoration {
     blur {
         enabled = false
-        size = 4
-        popups = true
-        ignore_opacity = true
-        new_optimizations = true
     }
 }
 decoration:shadow {
@@ -186,18 +182,8 @@ misc {
 }
 
 # ──────────────────────────────
-# Animations
+# Disable animations
 # ──────────────────────────────
 animations {
     enabled = false
-        bezier = wind, 0.05, 0.9, 0.1, 1.05
-        bezier = winIn, 0.1, 1.0, 0.1, 1.0
-        bezier = winOut, 0.3, -0.3, 0, 1
-        bezier = liner, 1, 1, 1, 1
-        animation = windowsIn, 1, 2, winIn
-        animation = windowsOut, 1, 4, winOut, popin 80%
-        animation = windowsMove, 1, 3, wind
-        animation = border, 1, 1, liner
-        animation = borderangle, 1, 30, liner, once
-        animation = workspaces, 0, 0
 }
