--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -24,10 +24,12 @@ set $fm footclient -e lf
 set $fm-gui thunar
 set $menu tofi-drun
 set $mod Mod4
+floating_modifier $mod
 
 # ========================
 # Borders and Gaps
 # ========================
+font pango:monospace 12
 client.focused          #3f4044 #3f4044 #ffffff #3f4044
 client.focused_inactive #1e1e20 #1e1e20 #ffffff #1e1e20
 client.urgent           #865054 #1e1e20 #1e1e20 #1e1e20
@@ -65,8 +67,8 @@ bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
-# bindsym $mod+semicolon splitv
-# bindsym $mod+apostrophe splith
+bindsym $mod+semicolon splitv
+bindsym $mod+apostrophe splith
 
 # ========================
 # Keybindings - General
