--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -146,6 +146,8 @@ decoration {
     blur {
         enabled = false
     }
+    rounding = 7
+    rounding_power = 2.0
 }
 decoration:shadow {
     enabled = false
