Made configs more graceful

--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -5,7 +5,7 @@ width = 100%
 height = 30
 horizontal = true
 font-size = 13
-font = monospace
+font = "monospace 13.15"
 prompt-text = "  "
 prompt-color = #656567
 font = monospace
@@ -14,7 +14,7 @@ border-width = 0
 background-color = #1e1e20
 text-color = "#eee"
 selection-color = #8e9760
-min-input-width = 320
+min-input-width = 300
 result-spacing = 20
 padding-top = 3
 padding-bottom = 0
