--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -1,6 +1,21 @@
-# ========================
+# ──────────────────────────────
+# Variables
+# ──────────────────────────────
+seat * xcursor_theme Bibata-Modern-Classic 24
+exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec systemctl enable --user --now xdg-desktop-portal-wlr.service
+
+set $browser zen-browser
+set $fm footclient -e lf
+set $fm-gui thunar
+set $menu tofi-drun
+set $mod Mod4
+floating_modifier $mod
+
+# ──────────────────────────────
 # Startup Applications
-# ========================
+# ──────────────────────────────
 exec --no-startup-id ~/.config/sway/addons/autotiling --l 2
 exec --no-startup-id foot --server
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -12,23 +27,9 @@ exec wl-paste --type text --watch cliphist store
 exec_always swayosd-server
 exec_always ~/.config/scripts/power-saver
 
-# ========================
-# Variables
-# ========================
-seat * xcursor_theme Bibata-Modern-Classic 24
-exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec systemctl enable --user --now xdg-desktop-portal-wlr.service
-set $browser zen-browser
-set $fm footclient -e lf
-set $fm-gui thunar
-set $menu tofi-drun
-set $mod Mod4
-floating_modifier $mod
-
-# ========================
-# Borders and Gaps
-# ========================
+# ──────────────────────────────
+# Appearance | Borders and Gaps
+# ──────────────────────────────
 font pango:monospace 11
 client.focused          #3f4044 #3f4044 #ffffff #3f4044
 client.focused_inactive #1e1e20 #1e1e20 #ffffff #1e1e20
@@ -38,24 +39,24 @@ default_border pixel 2
 gaps inner 8
 gaps outer 2
 
-# ========================
+# ──────────────────────────────
 # Input Configuration
-# ========================
+# ──────────────────────────────
 input * {
     accel_profile flat
-        xkb_options caps:escape
+    xkb_options caps:escape
 }
 
 input type:touchpad {
     pointer_accel 1
-        accel_profile flat
-        tap enabled
-        natural_scroll enabled
+    accel_profile flat
+    tap enabled
+    natural_scroll enabled
 }
 
-# ========================
-# Keybindings - Focus and Move
-# ========================
+# ──────────────────────────────
+# Keybinds | Focus and Move
+# ──────────────────────────────
 # Move focused window in directions
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
@@ -67,12 +68,14 @@ bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
+
+# Split containers
 bindsym $mod+semicolon splitv
 bindsym $mod+apostrophe splith
 
-# ========================
-# Keybindings - General
-# ========================
+# ──────────────────────────────
+# Keybinds | General
+# ──────────────────────────────
 bindsym $mod+button3 resize
 bindsym $mod+button1 move
 bindsym $mod+Shift+d exec ~/.config/scripts/power-menu
@@ -89,13 +92,17 @@ bindsym $mod+Shift+f exec hyprpicker
 bindsym $mod+s exec hyprshot -o ~/Pictures/Screenshots -m output -z
 bindsym $mod+space exec $menu
 bindsym $mod+v exec cliphist list | rofi -dmenu -p "Cliphist:" | cliphist decode | wl-copy
+
+# ──────────────────────────────
+# Keybinds | Volume Control
+# ──────────────────────────────
 bindsym XF86AudioLowerVolume exec swayosd-client --output-volume lower
 bindsym XF86AudioMute exec swayosd-client --output-volume mute-toggle
 bindsym XF86AudioRaiseVolume exec swayosd-client --output-volume raise
 
-# ========================
-# Keybindings - Workspaces
-# ========================
+# ──────────────────────────────
+# Keybinds | Workspaces
+# ──────────────────────────────
 # Move focused window to workspace
 bindsym $mod+Shift+1 move container to workspace number 1
 bindsym $mod+Shift+2 move container to workspace number 2
@@ -107,7 +114,6 @@ bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
-
 # Switch to workspace
 bindsym $mod+1 workspace number 1
 bindsym $mod+2 workspace number 2
