Reverted waybar config to the original stylish one, and removed rounding from hyprland completely.

--- a/waybar/.config/waybar/hyprland/config.jsonc
+++ b/waybar/.config/waybar/hyprland/config.jsonc
@@ -7,10 +7,10 @@
     "modules-left": [
         "custom/space",
         "clock",
+        "hyprland/workspaces",
     ],
     "modules-center": [
-        "hyprland/workspaces",
-
+        "hyprland/window"
     ],
     "modules-right": [
         "tray",
