Made colors of waybar match better with GTK theme.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -159,10 +159,10 @@ decoration:shadow {
 general {
     layout = master
         allow_tearing = false
-        gaps_in = 3
+        gaps_in = 4
         gaps_out = 9
         col.active_border = rgb(3f4044)
-        col.inactive_border = rgb(18181a)
+        col.inactive_border = rgb(1e1e20)
         border_size = 2
 }
 # Layouts
