Made waybar more monochrome.

--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -50,7 +50,7 @@
         {
             "type": "wm",
             "key": "wm    ",
-            "format": "{2} ({3})"
+            "format": "{2} {5} ({3})"
         },
         {
             "type": "uptime",
