--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -160,10 +160,10 @@ general {
     layout = master
         allow_tearing = false
         gaps_in = 4
-        gaps_out = 9
-        col.active_border = rgb(5f7a5f)
-        col.inactive_border = rgb(462326)
-        border_size = 1
+        gaps_out = 10
+        col.active_border = rgb(3f4044)
+        col.inactive_border = rgb(1e1e20)
+        border_size = 2
 }
 # Layouts
 dwindle {
