--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -5,10 +5,10 @@ width = 100%
 height = 30
 horizontal = true
 font-size = 13
-font = "monospace 13.15"
-prompt-text = "  "
+font = JetBrainsMono Nerd Font
+text-cursor=true
+prompt-text = " > "
 prompt-color = #656567
-font = monospace
 outline-width = 0
 border-width = 0
 background-color = #1e1e20
@@ -18,5 +18,5 @@ min-input-width = 305
 result-spacing = 20
 padding-top = 3
 padding-bottom = 0
-padding-left = 5
+padding-left = 0
 padding-right = 0
