Changed font in waybar.

--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -4,8 +4,8 @@ history = false
 width = 100%
 height = 30
 horizontal = true
-font-size = 13
-font = JetBrainsMono Nerd Font
+font-size = 14
+font = Rubik
 text-cursor=true
 prompt-text = " > "
 prompt-color = #656567
