--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -4,19 +4,19 @@ history = false
 width = 100%
 height = 30
 horizontal = true
-font-size = 14
-font = Rubik
+font-size = 13
+font = monospace
 text-cursor=true
-prompt-text = " > "
+prompt-text = "  "
 prompt-color = #656567
 outline-width = 0
 border-width = 0
 background-color = #1e1e20
 text-color = "#eee"
 selection-color = #8e9760
-min-input-width = 305
+min-input-width = 230
 result-spacing = 20
 padding-top = 3
 padding-bottom = 0
-padding-left = 0
+padding-left = 8
 padding-right = 0
