Changed up colors in the Hyprland configuration as well.

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -20,7 +20,7 @@ gamma-correct-blending= no
 # alpha = 0.8
 foreground = eeeeee
 background = 1e1e20
-regular0 = 1e1e20
+regular0 = 353537
 regular1 = 865054
 regular2 = 5f7a5f
 regular3 = a4965f
