--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -1,17 +1,11 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "display": {
-        "color": {
-            "keys": "cyan"
-        },
         "separator": " "
     },
 
     "logo": {
-        "source": "/home/joaquin/.config/fastfetch/logo.txt",
-        "color": {
-            "1": "blue",
-        }
+        "source": "/home/joaquin/.config/fastfetch/logo.txt"
     },
 
     "modules": [
