--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -146,8 +146,8 @@ decoration {
     blur {
         enabled = false
     }
-    rounding = 0
-    rounding_power = 0
+    rounding = 7
+    rounding_power = 2
 }
 decoration:shadow {
     enabled = false
@@ -162,7 +162,7 @@ general {
         gaps_in = 4
         gaps_out = 10
         col.active_border = rgb(3f4044)
-        col.inactive_border = rgb(1e1e20)
+        col.inactive_border = rgb(232325)
         border_size = 2
 }
 # Layouts
