--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -31,9 +31,9 @@ exec_always ~/.config/scripts/power-saver
 # ──────────────────────────────
 font pango:monospace 11
 client.focused          #3f4044 #3f4044 #ffffff #3f4044
-client.focused_inactive #1e1e20 #1e1e20 #ffffff #1e1e20
-client.urgent           #865054 #1e1e20 #1e1e20 #1e1e20
-client.unfocused        #1e1e20 #1e1e20 #ffffff #1e1e20
+client.focused_inactive #232325 #232325 #ffffff #232325
+client.urgent           #865054 #232325 #232325 #232325
+client.unfocused        #232325 #232325 #ffffff #232325
 default_border pixel 2
 gaps inner 8
 gaps outer 2
