--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -12,8 +12,8 @@ prompt-color = #656567
 outline-width = 0
 border-width = 0
 background-color = #1e1e20
-text-color = "#eee"
-selection-color = #8e9760
+text-color = "#d3d3d5"
+selection-color = #8c729a
 min-input-width = 230
 result-spacing = 20
 padding-top = 3
