--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -18,7 +18,7 @@ gamma-correct-blending= no
 
 [colors]
 # alpha = 0.8
-foreground = eeeeee
+foreground = d3d3d5
 background = 1e1e20
 regular0 = 353537
 regular1 = 865054
@@ -27,7 +27,7 @@ regular3 = a4965f
 regular4 = 5f7a8c
 regular5 = 75607a
 regular6 = 6a8b8b
-regular7 = eeeeee
+regular7 = d3d3d5
 bright0 = 555557
 bright1 = 976061
 bright2 = 729a72
