Reduced gaps and removed package management aliases.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -17,6 +17,7 @@ misc {
 }
 exec-once = waybar -c ~/.config/waybar/hyprland/config.jsonc
 exec-once = mako
+misc:vfr = true
 
 # ──────────────────────────────
 # Monitor configuration
@@ -160,7 +161,7 @@ general {
     layout = master
         allow_tearing = false
         gaps_in = 4
-        gaps_out = 10
+        gaps_out = 9
         col.active_border = rgb(3f4044)
         col.inactive_border = rgb(222224)
         border_size = 2
