--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -43,13 +43,17 @@ input {
 $mod = SUPER
 $terminal = footclient
 $fileManager = footclient -e lf
-$fileManager-alt = thunar
+$fileManager-alt = nemo
 $browser = zen-browser
 $menu = tofi-drun
 
 # ──────────────────────────────
 # Volume Control
 # ──────────────────────────────
+bind = $mod, equal, exec, swayosd-client --output-volume raise
+bind = $mod, minus, exec, swayosd-client --output-volume lower
+bind = $mod SHIFT, equal, exec, swayosd-client --brightness raise
+bind = $mod SHIFT, minus, exec, swayosd-client --brightness lower
 bindl = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
 bindl = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
 bindl = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
@@ -163,7 +167,7 @@ general {
         gaps_in = 4
         gaps_out = 9
         col.active_border = rgb(3f4044)
-        col.inactive_border = rgb(222224)
+        col.inactive_border = rgb(232325)
         border_size = 2
 }
 # Layouts
@@ -188,5 +192,15 @@ misc {
 # Disable animations
 # ──────────────────────────────
 animations {
-    enabled = false
+    enabled = true
+        bezier = wind, 0.05, 0.9, 0.1, 1.05
+        bezier = winIn, 0.1, 1.0, 0.1, 1.0
+        bezier = winOut, 0.3, -0.3, 0, 1
+        bezier = liner, 1, 1, 1, 1
+        animation = windowsIn, 1, 3, winIn, popin 80%
+        animation = windowsOut, 1, 3, winOut, slide
+        animation = windowsMove, 1, 3, wind
+        animation = border, 1, 1, liner
+        animation = borderangle, 1, 30, liner, once
+        animation = workspaces, 0, 0
 }
