--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -7,7 +7,7 @@ exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DE
 exec systemctl enable --user --now xdg-desktop-portal-wlr.service
 set $browser zen-browser
 set $fm footclient -e lf
-set $fm-gui thunar
+set $fm-gui nemo
 set $menu tofi-drun
 set $mod Mod4
 floating_modifier $mod
@@ -31,9 +31,9 @@ exec_always ~/.config/scripts/power-saver
 # ──────────────────────────────
 font pango:monospace 0.001
 client.focused          #3f4044 #3f4044 #ffffff #3f4044
-client.focused_inactive #212123 #212123 #ffffff #212123
-client.urgent           #865054 #212123 #212123 #212123
-client.unfocused        #212123 #212123 #ffffff #212123
+client.focused_inactive #222224 #222224 #ffffff #222224
+client.urgent           #865054 #222224 #222224 #222224
+client.unfocused        #222224 #222224 #ffffff #222224
 default_border pixel 2
 gaps inner 8
 gaps outer 2
@@ -98,6 +98,11 @@ bindsym $mod+v exec cliphist list | rofi -dmenu -p "Cliphist:" | cliphist decode
 bindsym XF86AudioLowerVolume exec swayosd-client --output-volume lower
 bindsym XF86AudioMute exec swayosd-client --output-volume mute-toggle
 bindsym XF86AudioRaiseVolume exec swayosd-client --output-volume raise
+bindsym $mod+equal exec swayosd-client --output-volume raise
+bindsym $mod+minus exec swayosd-client --output-volume lower
+# Brightness control (requires Shift for + key)
+bindsym $mod+Shift+equal exec swayosd-client --brightness raise
+bindsym $mod+Shift+minus exec swayosd-client --brightness lower
 
 # ──────────────────────────────
 # Keybinds | Workspaces
